# Browser-automation

./: agent_steps.txt  main.py  mark_page.js  path.py  pyproject.toml  readme.md
agent/: llm.py
agent/browser/: state.py  tools.py
agent/page/: llm.py
